@@ -1,3 +1,12 @@
+2009-01-09  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 560559 – GNOME Goal: Remove deprecated GLib symbols
+
+	* gconf/testclient.c: Replace deprecated GLib calls. Patch by
+	Travis Veralrud.
+
+	* gconf/Makefile.am: Remove commented-out mentions of testclient.c
+
 2008-12-30  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 565297 – a --toggle option for gconftool
